add some different states

--- a/packages/point-intercept/demo/index.html
+++ b/packages/point-intercept/demo/index.html
@@ -1,1 +1,6 @@
+<h2>evaluate mode - incorrect</h2>
 <point-intercept pie-id="1"></point-intercept>
+<h2>view mode</h2>
+<point-intercept pie-id="2"></point-intercept>
+<h2>gather mode</h2>
+<point-intercept pie-id="3"></point-intercept>
