--- a/packages/point-intercept/demo/index.html
+++ b/packages/point-intercept/demo/index.html
@@ -1,4 +1,4 @@
-<h2>evaluate mode - incorrect</h2>
+<h2>disabled - incorrect</h2>
 <point-intercept pie-id="1"></point-intercept>
 <h2>view mode</h2>
 <point-intercept pie-id="2"></point-intercept>
