--- a/packages/select-text/demo/index.html
+++ b/packages/select-text/demo/index.html
@@ -2,3 +2,5 @@
 <select-text pie-id="1"></select-text>
 <h5>View mode</h5>
 <select-text pie-id="2"></select-text>
+<h5>Evaluate mode</h5>
+<select-text pie-id="3"></select-text>
