feat(categorize): add new categorize component

--- a/packages/categorize/demo/index.html
+++ b/packages/categorize/demo/index.html
@@ -1,2 +1,6 @@
-<h1>Gather Mode: </h1>
+<h2>Gather Mode: </h2>
 <categorize-el pie-id="1"></categorize-el>
+<h2>View Mode: </h2>
+<categorize-el pie-id="2"></categorize-el>
+<h2>Evaluate Mode: </h2>
+<categorize-el pie-id="3"></categorize-el>
