feat(match-list): implemented the rest of the functionality and edited the demo code in order to be able to use sessions from a js file

--- a/packages/match-list/demo/index.html
+++ b/packages/match-list/demo/index.html
@@ -1,1 +1,6 @@
+<h2>Gather Mode: </h2>
 <match-list-element pie-id="1"></match-list-element>
+<h2>View Mode: </h2>
+<match-list-element pie-id="2"></match-list-element>
+<h2>Evaluate Mode: </h2>
+<match-list-element pie-id="3"></match-list-element>
