update to latest mask-markup

--- a/packages/drag-in-the-blank/demo/index.html
+++ b/packages/drag-in-the-blank/demo/index.html
@@ -1,6 +1,6 @@
 <h5>gather</h5>
 <drag-in-the-blank pie-id="1"></drag-in-the-blank>
-<!-- <h5>view</h5>
+<h5>view</h5>
 <drag-in-the-blank pie-id="2"></drag-in-the-blank>
 <h5>evaluate</h5>
-<drag-in-the-blank pie-id="3"></drag-in-the-blank> -->
+<drag-in-the-blank pie-id="3"></drag-in-the-blank>
