feat: number line updates
* Changed tick generation to use `{major: number, minor: number}` as
distance between ticks.
* added title field
* fix snapTo

BREAKING CHANGE: some model properties have changed. `domain` is now
`{min: number, max: number}`, `tickFrequency`, `showMinorTicks` is gone.

--- a/packages/number-line/demo/index.html
+++ b/packages/number-line/demo/index.html
@@ -1,1 +1,4 @@
 <number-line pie-id="1"></number-line>
+<number-line pie-id="2"></number-line>
+<number-line pie-id="3"></number-line>
+<number-line pie-id="4"></number-line>
