chore: update multiple choice demo

--- a/packages/multiple-choice/demo/index.html
+++ b/packages/multiple-choice/demo/index.html
@@ -1,4 +1,6 @@
-1:
+Gather:
 <multiple-choice pie-id="1"></multiple-choice>
-2:
+<br />
+<br />
+Evaluate:
 <multiple-choice pie-id="2"></multiple-choice>
