chore: update multiple choice demo and finalize changes

--- a/packages/multiple-choice/demo/index.html
+++ b/packages/multiple-choice/demo/index.html
@@ -1,5 +1,9 @@
-Gather:
+Gather Radio:
 <multiple-choice pie-id="1"></multiple-choice>
+<br />
+<br />
+Gather Checkbox:
+<multiple-choice pie-id="3"></multiple-choice>
 <br />
 <br />
 Evaluate:
