chore: update ebsr demo model

--- a/packages/ebsr/demo/index.html
+++ b/packages/ebsr/demo/index.html
@@ -1,1 +1,6 @@
+<p>Gather Mode</p>
 <ebsr-element pie-id="1"></ebsr-element>
+<br />
+<br />
+<p>Evaluate Mode</p>
+<ebsr-element pie-id="2"></ebsr-element>
