feat(math-inline): add color theme support

--- a/packages/math-inline/demo/index.html
+++ b/packages/math-inline/demo/index.html
@@ -1,1 +1,7 @@
+<p>Gather mode:</p>
 <math-inline pie-id="1"></math-inline>
+<br />
+<br />
+<br />
+<p>Evaluate Mode</p>
+<math-inline pie-id="2"></math-inline>
