feat(match): add color theme support

--- a/packages/match/demo/index.html
+++ b/packages/match/demo/index.html
@@ -1,1 +1,14 @@
+<p>Checkbox</p>
 <match-element pie-id="1"></match-element>
+<br />
+<br />
+<p>Radio</p>
+<match-element pie-id="2"></match-element>
+<br />
+<br />
+<p>Checkbox Evaluate</p>
+<match-element pie-id="3"></match-element>
+<br />
+<br />
+<p>Radio Evaluate</p>
+<match-element pie-id="4"></match-element>
