--- a/packages/inline-dropdown/demo/index.html
+++ b/packages/inline-dropdown/demo/index.html
@@ -4,3 +4,5 @@
 <inline-dropdown pie-id="2"></inline-dropdown>
 <h5>evaluate</h5>
 <inline-dropdown pie-id="3"></inline-dropdown>
+<h5>Demo</h5>
+<inline-dropdown pie-id="4"></inline-dropdown>
