feat(number-line): add color theme support

--- a/packages/number-line/demo/index.html
+++ b/packages/number-line/demo/index.html
@@ -2,3 +2,4 @@
 <number-line pie-id="2"></number-line>
 <number-line pie-id="3"></number-line>
 <number-line pie-id="4"></number-line>
+<number-line pie-id="5"></number-line>
