feat(placement-ordering): finalize color theme support and change disabled treatment

--- a/packages/placement-ordering/demo/index.html
+++ b/packages/placement-ordering/demo/index.html
@@ -1,2 +1,3 @@
 <placement-ordering pie-id="1"></placement-ordering>
 <placement-ordering pie-id="2"></placement-ordering>
+<placement-ordering pie-id="3"></placement-ordering>
